tests/tooling/fixtures/native/execution/positive/nested_block_statement_scope.objc3
module NestedBlockStatementScope;

fn main() -> i32 {
  let x = 1;
  {
    let x = 2;
    {
      x = x + 3;
    }
  }
  {
    let y = 4;
    x = x + y;
  }
  return x;
}
