tests/tooling/fixtures/native/execution/negative/conditional_missing_colon.objc3
module ConditionalMissingColonExec;

fn main() -> i32 {
  let x = true ? 1 2;
  return x;
}
